--- a/docs/thecoffeeserver/The Coffee Server - Report.tex
+++ b/docs/thecoffeeserver/The Coffee Server - Report.tex
@@ -382,6 +382,7 @@ In the Coffee Server problem, if the sorting of the sets of predicates is made a
 	\item \texttt{Machine([o],n)} (coming from the precondition list of the \texttt{Make([o],n)} operator);
 	\item \texttt{Petition(o,[n])} (from \texttt{Serve(o,[n])} operator);
 	\item \texttt{Robot-location([o1])} (from \texttt{Move([o1],o2)} operator);
+\end{itemize}
 Note that the parameters between brackets are the uninstantiated ones.
 
 
